Transform h2's to uppercase, new illustration, fix spacing and header opacity.

--- a/source/stylesheets/compared.css.scss
+++ b/source/stylesheets/compared.css.scss
@@ -1,3 +1,4 @@
+@import "vendor/bootstrap/bootstrap/variables";
 @import "variables";
 
 .comparison {
@@ -5,30 +6,32 @@
 
   .blog-image {
     background-size: contain;
+    background-color: $color-primary;
+
+    .color-bg {
+      background: rgba(85, 68, 136, 0.5);
+    }
   }
   .comparison-container {
-    padding-top: 20px;
+    padding: 40px;
   }
   .comparison-page-content {
     h2,
     h3,
     h4 {
       font-weight: bold;
-      margin: 40px 0 5px;
+      margin: 30px 0 5px;
     }
     h2 {
       // used as top-of-page title ref only
       font-size: 14px;
       color: $color-gray;
-      margin-top: 0;
+      margin: 0 0 20px 0;
+      text-transform: uppercase;
 
     }
     h3 {
       font-size: 18px;
-
-      &:first-of-type {
-        margin-top: 20px;
-      }
     }
     h4 {
       font-size: 16px;
@@ -42,6 +45,15 @@
     }
     a {
       color: $color-primary-alt;
+    }
+    // spacing after breakpoint
+    @media (max-width: $screen-xs-max) {
+      h2 {
+        margin: 40px 0 10px;
+      }
+      h3 {
+        margin-top: 10px;
+      }
     }
   }
 
